# filler

./: .gitignore  CMakeLists.txt  Makefile  bug.py  ctelma.filler  filler.h  filler.trace  ft_error.c  make_clear_file.py  set_mem.c
ft_printf/: Makefile  base.c  c.c  cast_len.c  check_flags.c  check_inf.c  check_mem.c  check_point_f.c  di.c  f.c  ft_itoa_base.c  ft_itoa_l.c  ft_itoa_u.c  ft_print.c  ft_printf.c  hash.c  initialization.c  len_5_l.c  length.c  make_color.c  make_prec.c  one_space_forward.c  p.c  pre_print.c  precision.c  print_base.c  print_cs.c  print_diuf.c  print_p.c  print_symb.c  rounding.c  s.c  size_str.c  space_back.c  space_forward.c  str_w.c  types.c  u.c  validation.c  width.c
ft_printf/header/: ft_printf.h
header/: filler.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_issymb.c  ft_isupper.c  ft_iswhitespace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_recursive_factorial.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+26 more)
libft/includes/: libft.h
players/: ctelma.filler
src/: algoritm.c  check_1_line.c  check_last_line.c  check_mid_lines.c  check_valid.c  choose_player.c  clean_memory.c  filler.c  first_push.c  ft_error.c  ft_min.c  get_next_line.c  get_score.c  make_map.c  read_map.c  read_sizes.c  set_mem.c  solve.c  stars.c
visualisation/: button.py  functions.py  map.py  players.py  settings.py  test1  test2  tests  visualisation.py
