cmake_minimum_required(VERSION 3.15)
project(filler C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(ft_printf/header)
include_directories(libft/includes)

add_executable(filler
        ft_printf/header/ft_printf.h
        ft_printf/base.c
        ft_printf/c.c
        ft_printf/cast_len.c
        ft_printf/check_flags.c
        ft_printf/check_inf.c
        ft_printf/check_mem.c
        ft_printf/check_point_f.c
        ft_printf/di.c
        ft_printf/f.c
        ft_printf/ft_itoa_base.c
        ft_printf/ft_itoa_l.c
        ft_printf/ft_itoa_u.c
        ft_printf/ft_print.c
        ft_printf/ft_printf.c
        ft_printf/hash.c
        ft_printf/initialization.c
        ft_printf/len_5_l.c
        ft_printf/length.c
        ft_printf/make_color.c
        ft_printf/make_prec.c
        ft_printf/one_space_forward.c
        ft_printf/p.c
        ft_printf/pre_print.c
        ft_printf/precision.c
        ft_printf/print_base.c
        ft_printf/print_cs.c
        ft_printf/print_diuf.c
        ft_printf/print_p.c
        ft_printf/print_symb.c
        ft_printf/rounding.c
        ft_printf/s.c
        ft_printf/size_str.c
        ft_printf/space_back.c
        ft_printf/space_forward.c
        ft_printf/str_w.c
        ft_printf/types.c
        ft_printf/u.c
        ft_printf/validation.c
        ft_printf/width.c
        libft/includes/libft.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_issymb.c
        libft/ft_isupper.c
        libft/ft_iswhitespace.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_recursive_factorial.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        src/filler.c
        header/filler.h
        src/get_next_line.c
        src/set_mem.c
        src/algoritm.c
        src/check_valid.c
        src/read_map.c
        src/read_sizes.c
        src/choose_player.c
        src/make_map.c src/check_1_line.c src/ft_min.c src/check_last_line.c src/check_mid_lines.c src/choose_player.c src/solve.c src/get_score.c src/stars.c)
